--- a/vercel.json
+++ b/vercel.json
@@ -35,6 +35,7 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production"
+    "DATABASE_URL": "@database_url",
+    "JWT_SECRET": "@jwt_secret"
   }
 }
