--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "start": "npm start --workspace=backend",
     "dev:frontend": "npm run dev --workspace=frontend",
     "dev:backend": "npm run dev --workspace=backend",
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\""
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "install:backend": "cd backend && npm install",
+    "install:frontend": "cd frontend && npm install",
+    "build:backend": "cd backend && npx prisma generate",
+    "build:frontend": "cd frontend && npm run build"
   },
   "dependencies": {
     "react-redux": "^9.2.0",
