path the prisma schema updated

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "frontend",
     "backend"
   ],
+  "prisma": {
+    "schema": "./backend/prisma/schema.prisma",
   "scripts": {
     "build": "npm run build --workspace=frontend && prisma generate && npm run build",
     "start": "npm start --workspace=backend",
