--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm run build"
       }
     }
   ],
@@ -26,13 +27,12 @@
       "dest": "frontend/dist/assets/$1"
     },
     {
-      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|gif))",
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|gif|mp3|wav))",
       "dest": "frontend/dist/$1" 
     },
     {
       "src": "/(.*)",
       "dest": "frontend/dist/index.html"
     }
-  ],
-  "buildCommand": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend"
+  ]
 }
