--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,12 @@
   "buildCommand": "npm run install:frontend && npm run build:frontend",
   "outputDirectory": "frontend/dist",
   "rewrites": [
+    { "source": "/api/:path*", "destination": "/backend/index.js" },
     { "source": "/tmdb/:path*", "destination": "/backend/index.js" },
     { "source": "/game/:path*", "destination": "/backend/index.js" },
-    { "source": "/api/:path*", "destination": "/backend/index.js" },
     { "source": "/(.*)", "destination": "/frontend/dist/index.html" }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
