change to welcome message so it doesn't overlap on smaller screens

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "build": "npx prisma generate",
-    "dev": "node --watch server.js",
+    "dev": "node --watch index.js",
     "start": "node index.js"
   },
   "keywords": [],
