--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
     "vitest": "^3.1.1",
-    "concurrently": "^8.0.0"
+    "concurrently": "^8.0.0",
+    "@rollup/rollup-linux-x64-gnu": "4.44.0"
+  },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
   }
 }
