--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,15 @@
     "test": "vitest",
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "vite build --mode production",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite preview --host 0.0.0.0 --port $PORT",
+    "start": "node server.js"
   },
   "dependencies": {
     "enhanced-resolve": "^5.18.2",
+    "express": "^4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
