--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: TMDB_API_KEY
+        sync: false
       - key: REACT_APP_API_KEY
         sync: false
       - key: DATABASE_URL
